fixed logo placementand line spacing issues i hope

--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,7 @@
 a {
   text-decoration: none;
 }
+
+.social-media-logos {
+  display: flex;
+}
